force-app/main/default/objects/EventQueue__c/EventQueue__c.object-meta.xml
<CustomObject>
    <description>Message Events</description>
    <label>EventQueue</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>EventQueue</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EventQueues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>