force-app/main/default/objects/EventQueue__c/fields/CorrelatedNumber__c.field-meta.xml
<CustomField>
    <fullName>CorrelatedNumber__c</fullName>
    <description>Business Document Correlated Number</description>
    <label>CorrelatedNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>