force-app/main/default/objects/EventQueue__c/fields/DetailedStatus__c.field-meta.xml
<CustomField>
    <fullName>DetailedStatus__c</fullName>
    <description>Error Message from internal or external System</description>
    <label>DetailedStatus</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>