force-app/main/default/objects/EventQueue__c/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <description>DocumentNumber</description>
    <label>DocumentNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>