force-app/main/default/objects/EventQueue__c/fields/ErrorStackTrace__c.field-meta.xml
<CustomField>
    <fullName>ErrorStackTrace__c</fullName>
    <description>Used only for error messages, fill this field using getStackTraceString() method</description>
    <label>ErrorStackTrace</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>