force-app/main/default/objects/EventQueue__c/fields/ParentEvent__c.field-meta.xml
<CustomField>
    <fullName>ParentEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Event</description>
    <label>ParentEvent</label>
    <referenceTo>EventQueue__c</referenceTo>
    <relationshipLabel>EventQueues</relationshipLabel>
    <relationshipName>EventQueues</relationshipName>
    <type>Lookup</type>
</CustomField>