force-app/main/default/objects/EventQueue__c/fields/RetryCount__c.field-meta.xml
<CustomField>
    <fullName>RetryCount__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Identify the number of retries for this event</description>
    <label>RetryCount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>