force-app/main/default/objects/EventQueue__c/fields/SalesforceObjectId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceObjectId__c</fullName>
    <description>Salesforce Object Id</description>
    <label>SalesforceObjectId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>