force-app/main/default/objects/EventQueue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of event</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUEUED</fullName>
                <default>true</default>
                <label>QUEUED</label>
            </value>
            <value>
                <fullName>DELIVERED</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>INVALID</fullName>
            </value>
            <value>
                <fullName>SCHEDULED</fullName>
            </value>
            <value>
                <fullName>UNHANDLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>