force-app/main/default/objects/EventQueue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>